Save old changes

--- a/ssh_1d_sat_gain/ssh_1d_cpp.ipynb
+++ b/ssh_1d_sat_gain/ssh_1d_cpp.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,9 @@
     "import h5py\n",
     "from numpy import linalg\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "tsfilename = 'time_series.hdf5'\n",
+    "\n",
     "\n",
     "\n",
     "def plot_pod(time_series, data_index, singval_index):\n",
@@ -342,6 +344,9 @@
     "    ax3.set_ylabel(f'imag phi_{data_index},{singval_index},n')\n",
     "    ax3.set_xlabel('n')\n",
     "\n",
+    "data1_index = 4\n",
+    "data2_index = 11\n",
+    "\n",
     "file = h5py.File(tsfilename, 'r')\n",
     "data1 = file[f'series_{data1_index}']\n",
     "data2 = file[f'series_{data2_index}']\n",
@@ -350,6 +355,112 @@
     "N = data1.attrs['N']\n",
     "plot_pod(time_series=data1[:], data_index=data1_index, singval_index=1)\n",
     "plot_pod(time_series=data2[:], data_index=data2_index, singval_index=0)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$X_2=AX_1$$\n",
+    "$$X_2X_1^{-1}=A$$\n",
+    "linalg.solve: $$b=ax$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oscillating: x,y: 0.07800932022121826 0.34236558627693964\n",
+      "static: x,y: 0.48495492608099716 0.20912151814530944\n",
+      "U,S,Vh shapes and r:  (21, 10) (10,) (10, 21) 10\n",
+      "[17.34072986  2.90780783  1.2129454   1.14773946  0.60521529  0.54798388\n",
+      "  0.42324619  0.41013389  0.3881777   0.18721759]\n",
+      "U,S,Vh shapes and r:  (21, 2) (2,) (2, 21) 2\n",
+      "[3.62171714 0.17228439]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# svd: DMD (supp. mat. sec B)\n",
+    "import h5py\n",
+    "from numpy import linalg\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "tsfilename = 'time_series.hdf5'\n",
+    "\n",
+    "def trunc_svd(mat, r_threshold = 0.99, full_matrices=False):\n",
+    "    U, S, Vh = linalg.svd(mat, full_matrices=full_matrices)\n",
+    "    r = len(S)\n",
+    "    s_cummulative = 0\n",
+    "    s_threshold = np.sum(S)*r_threshold\n",
+    "    for i, s in enumerate(S):\n",
+    "        s_cummulative+=s\n",
+    "        if s_cummulative > s_threshold:\n",
+    "            r = i+1\n",
+    "            break\n",
+    "    return (U[:,:r], S[:r,], Vh[:r,:], r)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def plot_dmd(time_series, data_index, singval_index):\n",
+    "    t_values = time_series[:,0].real.T\n",
+    "    psi_values = time_series[:,1:].T\n",
+    "\n",
+    "    Ns,Nt = psi_values.shape\n",
+    "    N0 = np.min([Nt,Ns])\n",
+    "    N = int((Ns-1)/2)\n",
+    "\n",
+    "    X1 = psi_values[:,0:Ns]\n",
+    "\n",
+    "\n",
+    "    # A = X2 @ linalg.inv(X1)\n",
+    "    # print(\"X1,X2,A shapes:\", X1.shape, X2.shape, A.shape)\n",
+    "\n",
+    "    # lambdas, Phi = linalg.eig(A)\n",
+    "    # print(\"lambdas, Phi shapes:\", lambdas.shape, Phi.shape)\n",
+    "\n",
+    "    U, S, Vh, r = trunc_svd(X1)\n",
+    "    print(\"U,S,Vh shapes and r: \", U.shape, S.shape, Vh.shape, r)\n",
+    "    X2 = A\n",
+    "\n",
+    "    # U, S, Vh = linalg.svd(psi_values, full_matrices=False)\n",
+    "\n",
+    "    # fig, ((ax1,ax2),(ax3, ax4)) = plt.subplots(2,2,figsize=(6, 6))\n",
+    "    # fig.tight_layout(pad=3)\n",
+    "    # ax1.scatter(range(len(S)),S/S[0], label='sigma_i/sigma_1')\n",
+    "    # ax1.scatter(singval_index,S[singval_index]/S[0], label='plotted sing val')\n",
+    "    # ax1.legend()\n",
+    "    # ax1.set_xlabel(\"index\")\n",
+    "\n",
+    "    # ax3.bar(np.arange(-N,N+1), U[:,singval_index].real)\n",
+    "    # ax3.grid()\n",
+    "    # ax3.set_axisbelow(True)\n",
+    "    # ax3.set_ylabel(f'real phi_{data_index},{singval_index},n')\n",
+    "    # ax3.set_xlabel('n')\n",
+    "\n",
+    "    # ax4.bar(np.arange(-N,N+1), U[:,singval_index].imag)\n",
+    "    # ax4.grid()\n",
+    "    # ax4.set_axisbelow(True)\n",
+    "    # ax4.set_ylabel(f'imag phi_{data_index},{singval_index},n')\n",
+    "    # ax4.set_xlabel('n')\n",
+    "\n",
+    "data1_index = 4\n",
+    "data2_index = 11\n",
+    "\n",
+    "file = h5py.File(tsfilename, 'r')\n",
+    "data1 = file[f'series_{data1_index}']\n",
+    "data2 = file[f'series_{data2_index}']\n",
+    "print('oscillating: x,y:', data1.attrs['x'],data1.attrs['y'])\n",
+    "print('static: x,y:', data2.attrs['x'],data2.attrs['y'])\n",
+    "N = data1.attrs['N']\n",
+    "plot_dmd(time_series=data1[:], data_index=data1_index, singval_index=1)\n",
+    "plot_dmd(time_series=data2[:], data_index=data2_index, singval_index=0)\n",
     "file.close()"
    ]
   },
