add dmd equation derivation

--- a/ssh_1d_sat_gain/ssh_1d_cpp.ipynb
+++ b/ssh_1d_sat_gain/ssh_1d_cpp.ipynb
@@ -362,9 +362,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Supplementary information: section B:\n",
+    "\n",
+    "\n",
     "$$X_2=AX_1$$\n",
-    "$$X_2X_1^{-1}=A$$\n",
-    "linalg.solve: $$b=ax$$"
+    "Do truncated svd of $X_1 = U_r\\Sigma_rV_r^\\dagger$,\n",
+    "\n",
+    "$$\\implies X_2 = AU_r\\Sigma_rV_r^\\dagger$$\n",
+    "\n",
+    "Find $A$ in truncated POD subspace, i.e. $A_r$:\n",
+    "\n",
+    "$$A_r=U_r^\\dagger AU_r = U_r^\\dagger X_2V_r\\Sigma_r^{-1}$$\n",
+    "\n",
+    "Eigen-decompose $A_r$:\n",
+    "\n",
+    "$$A_rW=\\Lambda W$$\n",
+    "\n",
+    "But since $A\\Phi = \\Lambda\\Phi$ and $A_r\\approx U_r^\\dagger AU_r$, we know the transformation \n",
+    "$$ \\Phi = U_rW$$\n",
+    "Substitute the $U_r$ using the SVD of $X_1$ to get\n",
+    "$$\\Phi = X_1V_r\\Sigma_r^{-1}W$$\n",
+    "which we can evolve by left multiplying both sides by $A$\n",
+    "$$\\Lambda\\Phi = X_2V_r\\Sigma_r^{-1}W$$\n",
+    "\n",
+    "### Calculation plan:\n",
+    "#### Size fit confirm\n",
+    "Let $X_{1,2}$ be time series data of size $N_s\\times N_t$, with $N_r$ being the size of truncated matrices below. \n",
+    "Since $W$ is eigen vectors of $A_r$, $W$ has square size $N_r$ too. \n",
+    "So $X_2$ is $N_t$ columns and $X_2V_r\\Sigma_r^{-1}$ is $N_s\\times N_r$, the size of $\\Phi$\n",
+    "\n",
+    "#### Calculation steps\n",
+    "1. Grab two time snapshots $X_{1,2}$\n",
+    "1. Find SVD of $X_1$ truncated to $r$:  $X_1=U_r\\Sigma_r V_r^\\dagger$\n",
+    "1. Project $A$ into POD subspace:  $A_r =U_r^\\dagger X_2V_r\\Sigma_r^{-1}$\n",
+    "1. Find eigenvectors $W$ of $A_r$\n",
+    "1. Obtain $\\Phi$ using formula from prev. section.\n"
    ]
   },
   {
