--- a/ssh_1d_sat_gain/ssh_1d_cpp.ipynb
+++ b/ssh_1d_sat_gain/ssh_1d_cpp.ipynb
@@ -362,6 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### DMD\n",
     "### Supplementary information: section B:\n",
     "\n",
     "\n",
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -454,8 +455,7 @@
     "    return (U[:,:r], S[:r,], Vh[:r,:], r)\n",
     "\n",
     "\n",
-    "\n",
-    "def plot_dmd(time_series, data_index):\n",
+    "def calc_dmd(time_series, data_index):\n",
     "    t_values = time_series[:,0].real.T\n",
     "    psi_values = time_series[:,1:].T\n",
     "\n",
@@ -482,7 +482,10 @@
     "\n",
     "    mu_dt = np.real(np.log(lam))\n",
     "    omega_dt = np.imag(np.log(lam))\n",
+    "    return (Phi, lam, W, S, mu_dt, omega_dt)\n",
     "\n",
+    "def plot_dmd(time_series, data_index):\n",
+    "    Phi, lam, W, S, mu_dt, omega_dt = calc_dmd(time_series=time_series, data_index=data_index)\n",
     "\n",
     "    fig, ((ax1,ax2),(ax3, ax4), (ax5,ax6)) = plt.subplots(3,2,figsize=(6, 6))\n",
     "    fig.tight_layout(pad=3)\n",
@@ -541,6 +544,82 @@
     "plot_dmd(time_series=data1[:], data_index=data1_index)\n",
     "plot_dmd(time_series=data2[:], data_index=data2_index)\n",
     "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### aDMD\n",
+    "\n",
+    "In here, as per the referenced paper, we augment the basis vectors $\\Phi$ along the spatial dimension, with time. \n",
+    "Specifics: Remember that $\\Phi$ is of size $N_s\\times N_r$ according to previous markdown cell. We augment it by repeating the $N_s$ rows of $\\Phi$, each time multiplying by $\\Lambda$, that is,\n",
+    "$$\n",
+    "\\Phi=[\\phi_i]\\xrightarrow{} [[\\phi_i], \\lambda_i[\\phi_i], \\lambda_i^1[\\phi_i], \\lambda_i^2[\\phi_i], ... \\lambda_i^{N_w}[\\phi_i]]^T\n",
+    "$$ \n",
+    "where $\\phi_i$ is the $i$-th column, and T is transpose."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oscillating: x,y, data_index=4: 0.07800932022121826 0.34236558627693964\n",
+      "static: x,y, data_index=11: 0.48495492608099716 0.20912151814530944\n",
+      "[[-1.03696907e-01+2.11686466e-04j -7.43356486e-02-2.80722820e-01j\n",
+      "  -7.45384866e-02+2.80660496e-01j ...  5.00101035e-02-2.71085568e-03j\n",
+      "   3.37808232e-02+1.37787531e-01j -1.14160572e-01+2.20048891e-01j]\n",
+      " [ 3.55196782e-05+1.70159234e-02j  5.83073000e-03+1.66008130e-01j\n",
+      "  -5.95638513e-03+1.66012314e-01j ...  8.14590223e-02-9.40504736e-03j\n",
+      "   8.40248732e-02+2.07114252e-01j -1.02089291e-01+2.86506156e-01j]\n",
+      " [ 1.46232513e-01-3.00160203e-04j  8.30188854e-02+2.71182113e-01j\n",
+      "   8.32258893e-02-2.71100039e-01j ...  1.29657674e-01-1.13133853e-02j\n",
+      "   1.14077852e-01+2.70342656e-01j -4.97071504e-02+2.06253293e-01j]\n",
+      " ...\n",
+      " [ 1.46578416e-01-2.99931834e-04j -5.16768677e-02-2.79470813e-01j\n",
+      "  -5.19163679e-02+2.79380305e-01j ... -1.02474143e-01+6.75422200e-02j\n",
+      "  -4.08399381e-02-2.88386714e-01j  1.89944453e-01+8.29082848e-02j]\n",
+      " [ 3.54945060e-05+1.70561734e-02j  1.31576044e-02-1.65943037e-01j\n",
+      "  -1.30144612e-02-1.65946848e-01j ... -6.33501931e-02+4.43397761e-02j\n",
+      "  -2.80521935e-02-2.20082035e-01j  2.58229726e-01+1.46951179e-01j]\n",
+      " [-1.03942195e-01+2.11521770e-04j  4.19420641e-02+2.87977639e-01j\n",
+      "   4.21769902e-02-2.87906506e-01j ... -4.02665478e-02+2.46806452e-02j\n",
+      "   2.56312254e-03-1.40799427e-01j  1.92248366e-01+1.47255468e-01j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "assert 'calc_dmd' in globals(), 'calc_dmd not defined, run prior cell'\n",
+    "assert 'tsfilename' in globals(), 'cannot find time series data file, run prior cell'\n",
+    "\n",
+    "\n",
+    "file = h5py.File(tsfilename, 'r')\n",
+    "data1 = file[f'series_{data1_index}']\n",
+    "data2 = file[f'series_{data2_index}']\n",
+    "print(f'oscillating: x,y, data_index={data1_index}:', data1.attrs['x'],data1.attrs['y'])\n",
+    "print(f'static: x,y, data_index={data2_index}:', data2.attrs['x'],data2.attrs['y'])\n",
+    "N = data1.attrs['N']\n",
+    "Phi1, lam1, *_ = calc_dmd(time_series=data1[:], data_index=data1_index)\n",
+    "Phi2, lam2, *_ = calc_dmd(time_series=data2[:], data_index=data2_index)\n",
+    "file.close()\n",
+    "\n",
+    "def augment_dmd(Phi, lam, Nw):\n",
+    "    Ns,Nr = Phi.shape\n",
+    "    Lam = np.tile(lam, (Ns,1))\n",
+    "    aShape = (Ns*(Nw+1), Nr)\n",
+    "    aPhi = np.zeros(aShape, dtype='complex')\n",
+    "    for n in np.arange(Nw+1):\n",
+    "        aPhi[n*Ns:(n+1)*Ns, :] = Lam**n * Phi\n",
+    "    return aPhi\n",
+    "\n",
+    "aPhi1 = augment_dmd(Phi1, lam1, Nw=5)\n",
+    "print(aPhi1)\n"
    ]
   },
   {
