--- a/ssh_1d_sat_gain/demos.ipynb
+++ b/ssh_1d_sat_gain/demos.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "time_series = ssh_1d.time_series(params)\n",
     "t_values = time_series[:,0].real\n",
-    "psi_values = time_series[:,1:]"
+    "psi_values = time_series[:,1:]\n"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "paramtext = \"\\n\".join([ f\"{key:<15}={value:<6}\" for key, value in params.items()])\n",
     "ax.text(x=.5, y=.3,s=paramtext, color='black', transform=ax.transAxes, size=12)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "    ax.set_ymargin(0)\n",
     "    ax.grid(True)\n",
     "\n",
-    "# phase_diagram()"
+    "# phase_diagram()\n"
    ]
   },
   {
@@ -185,12 +185,12 @@
     "ax.set_ylim((0,5e4))\n",
     "ax.set_xmargin(0)\n",
     "ax.grid(True)\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -205,18 +205,11 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import main\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "np.random.seed(42) #for reproducibility\n",
-    "\n",
-    "num_time_series = 500\n",
-    "\n",
+    "x_,y_ = main.generate_phase_diagram_points(500)\n",
     "data1_index = 4\n",
     "data2_index = 11\n",
-    "x_ = np.random.uniform(0, 0.5, num_time_series)\n",
-    "y_ = np.random.uniform(0, 0.5, num_time_series)\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(3, 3))\n",
     "ax.scatter(x_, y_, color='blue', marker='.')\n",
     "ax.scatter(x_[data1_index],y_[data1_index], color='red')\n",
@@ -231,45 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#generate data\n",
-    "import concurrent.futures\n",
-    "import h5py\n",
-    "\n",
-    "tsfilename = 'time_series.hdf5'\n",
-    "h5py.File(tsfilename, 'w').close() #must create empty existing file to avoid overloading python memory\n",
-    "time_sample_size = 1000\n",
-    "\n",
-    "def time_series_worker(i, x,y):\n",
-    "    gamA = x\n",
-    "    params = ssh_1d.TimeSeriesParams(N=10, psi0=0.01, satGainA=y+gamA, satGainB=0.,\n",
-    "                                     gammaA=gamA, gammaB=gamA, time_end=1200, time_delta=0.01,\n",
-    "                                     t1=1., t2=0.7)\n",
-    "    time_series = ssh_1d.time_series(params)\n",
-    "    time_series = time_series[1799:,:] # start from 1800-th time step\n",
-    "    samp_indices = np.round(np.linspace(0,time_series.shape[0]-1,time_sample_size)).astype(int)\n",
-    "    with h5py.File(tsfilename, 'a') as tsfile:\n",
-    "        data = time_series[samp_indices,:]\n",
-    "        dataset = tsfile.create_dataset(name=f'series_{i}', data = data)\n",
-    "        dataset.attrs['x'] = x\n",
-    "        dataset.attrs['y'] = y\n",
-    "        dataset.attrs['N'] = 10\n",
-    "        tsfile.flush()\n",
-    "    return 'success'\n",
-    "\n",
-    "xy_pairs = np.array([(x,y) for x,y in zip(x_,y_)])\n",
-    "\n",
-    "\n",
-    "with concurrent.futures.ThreadPoolExecutor(max_workers=20) as executor:\n",
-    "    futures = [executor.submit(time_series_worker, i, *(xy_pair)) for i, xy_pair in enumerate(xy_pairs)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +268,6 @@
     "tsfilename = 'time_series.hdf5'\n",
     "\n",
     "\n",
-    "\n",
     "def plot_pod(time_series, data_index, singval_index):\n",
     "    t_values = time_series[:,0].real.T\n",
     "    psi_values = time_series[:,1:].T\n",
@@ -355,7 +309,7 @@
     "N = data1.attrs['N']\n",
     "plot_pod(time_series=data1[:], data_index=data1_index, singval_index=1)\n",
     "plot_pod(time_series=data2[:], data_index=data2_index, singval_index=0)\n",
-    "file.close()"
+    "file.close()\n"
    ]
   },
   {
@@ -402,7 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -543,8 +504,15 @@
     "N = data1.attrs['N']\n",
     "plot_dmd(time_series=data1[:], data_index=data1_index)\n",
     "plot_dmd(time_series=data2[:], data_index=data2_index)\n",
-    "file.close()"
+    "file.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -562,7 +530,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "assert 'calc_dmd' in globals(), 'calc_dmd not defined, run prior cell'\n",
+    "assert 'tsfilename' in globals(), 'cannot find time series data file, run prior cell'\n",
+    "\n",
+    "\n",
+    "file = h5py.File(tsfilename, 'r')\n",
+    "data1 = file[f'series_{data1_index}']\n",
+    "data2 = file[f'series_{data2_index}']\n",
+    "print(f'oscillating: x,y, data_index={data1_index}:', data1.attrs['x'],data1.attrs['y'])\n",
+    "print(f'static: x,y, data_index={data2_index}:', data2.attrs['x'],data2.attrs['y'])\n",
+    "N = data1.attrs['N']\n",
+    "Phi1, lam1, W1, S1, *_ = calc_dmd(time_series=data1[:], data_index=data1_index)\n",
+    "Phi2, lam2, W2, S2, *_ = calc_dmd(time_series=data2[:], data_index=data2_index)\n",
+    "file.close()\n",
+    "print(Phi1.shape)\n",
+    "def augment_dmd(Phi, lam, Nw):\n",
+    "    Ns,Nr = Phi.shape\n",
+    "    Lam = np.tile(lam, (Ns,1))\n",
+    "    aShape = (Ns*(Nw+1), Nr)\n",
+    "    aPhi = np.zeros(aShape, dtype='complex')\n",
+    "    for n in np.arange(Nw+1):\n",
+    "        aPhi[n*Ns:(n+1)*Ns, :] = Lam**n * Phi\n",
+    "    return aPhi\n",
+    "\n",
+    "aPhi1 = augment_dmd(Phi1, lam1, Nw=25)\n",
+    "print(aPhi1.shape)\n",
+    "\n",
+    "def plot_admd(Phi, data_index):\n",
+    "    fig, ((ax1,ax2),(ax3, ax4)) = plt.subplots(2,2,figsize=(12, 6))\n",
+    "    fig.tight_layout(pad=3)\n",
+    "\n",
+    "    singval_index = 0\n",
+    "\n",
+    "    sites = np.arange(0,Phi.shape[0])\n",
+    "\n",
+    "    ax1.bar(sites, Phi[:,singval_index].real)\n",
+    "    ax1.grid()\n",
+    "    ax1.set_axisbelow(True)\n",
+    "    ax1.set_ylabel(f'real phi_{data_index},{singval_index},n')\n",
+    "    ax1.set_xlabel('n')\n",
+    "\n",
+    "    ax2.bar(sites, Phi[:,singval_index].imag)\n",
+    "    ax2.grid()\n",
+    "    ax2.set_axisbelow(True)\n",
+    "    ax2.set_ylabel(f'imag phi_{data_index},{singval_index},n')\n",
+    "    ax2.set_xlabel('n')\n",
+    "\n",
+    "    singval_index = 1\n",
+    "    if Phi.shape[1]>1:\n",
+    "        ax3.bar(sites, Phi[:,singval_index].real)\n",
+    "        ax3.grid()\n",
+    "        ax3.set_axisbelow(True)\n",
+    "        ax3.set_ylabel(f'real phi_{data_index},{singval_index},n')\n",
+    "        ax3.set_xlabel('n')\n",
+    "\n",
+    "        ax4.bar(sites, Phi[:,singval_index].imag)\n",
+    "        ax4.grid()\n",
+    "        ax4.set_axisbelow(True)\n",
+    "        ax4.set_ylabel(f'imag phi_{data_index},{singval_index},n')\n",
+    "        ax4.set_xlabel('n')\n",
+    "plot_admd(aPhi1, data_index=data1_index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -647,16 +693,7 @@
     "        ax4.set_axisbelow(True)\n",
     "        ax4.set_ylabel(f'imag phi_{data_index},{singval_index},n')\n",
     "        ax4.set_xlabel('n')\n",
-    "plot_admd(aPhi1, data_index=data1_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://bitbucket.org/topologicalphotonics/pti_dynamic_model/src/master/src/run_ssh_sat_gain.cpp\n"
+    "plot_admd(aPhi1, data_index=data1_index)\n"
    ]
   }
  ],
@@ -676,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
